--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt 1 - Wyszukiwarka</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -19,11 +19,10 @@
             </div>
         </div>
         <div class="drink-list">
-            <h2>Lista dostępnych napojów</h2>
+            <h2>Lista dostępnych napojów:</h2>
             <ul>
                 <li>Mleko</li>
                 <li>Piwo</li>
-                <li>Whisky</li>
                 <li>Pepsi</li>
                 <li>Woda gazowana</li>
                 <li>Sok jabłkowy</li>
@@ -34,6 +33,11 @@
                 <li>Wino białe</li>
                 <li>Woda niegazowana</li>
                 <li>Energy drink</li>
+                <li>Whisky</li>
+                <li>Wódka</li>
+                <li>Gin</li>
+                <li>Tequila</li>
+                <li>Rum</li>
             </ul>
         </div>
     </div>
